--- a/firstlab.ipynb
+++ b/firstlab.ipynb
@@ -30,29 +30,25 @@
       "metadata": {
         "id": "QUXrzU4HhXAn",
         "colab_type": "code",
-        "outputId": "e39bd2e8-286c-4199-8ede-4c164b07241d",
+        "outputId": "8ae537ba-c545-440d-a6da-8b39090309e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 52
         }
       },
       "source": [
         "import numpy as np\n",
         "a = np.array([1, 2, 3, 4, 5])\n",
         "print(a * 7)\n",
-        "print(a)\n",
-        "print(a*3)\n",
-        "print(a*4)"
+        "print(a)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[ 7 14 21 28 35]\n",
-            "[1 2 3 4 5]\n",
-            "[ 3  6  9 12 15]\n",
-            "[ 4  8 12 16 20]\n"
+            "[1 2 3 4 5]\n"
           ],
           "name": "stdout"
         }
